cli/tests/import_data_url_error_stack.ts.out
[WILDCARD]error: Uncaught Error: Hello 2
   throw new Error(`Hello ${A.C}`);
         ^
    at a (data:application/typescript;base64,ZW51bSBBIHsKICBBLAogIEIsCiAgQywKIH0KIAogZXhwb3J0IGZ1bmN0aW9uIGEoKSB7CiAgIHRocm93IG5ldyBFcnJvcihgSGVsbG8gJHtBLkN9YCk7CiB9CiA=:8:10)
    at file:///[WILDCARD]/cli/tests/import_data_url_error_stack.ts:3:1
[WILDCARD]
